fix overflow-x v2

--- a/src/site/_includes/postcss/_10_layout.css
+++ b/src/site/_includes/postcss/_10_layout.css
@@ -14,8 +14,11 @@
 }
 */
 
-header {
+body {
   overflow-x: hidden;
+}
+
+header {
   @media screen and (min-width: $sm) and (max-width: $sme) {
     padding: 0 25px 0 25px;
   }
